# Helix

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  11.txt  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  progress.md  pyproject.toml  requirements-dev.txt
backend/: Dockerfile  conftest.py  docker-compose.yml  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/helix_platform/: __init__.py  event_bus.py  runtime.py
backend/helix_platform/config/: __init__.py
backend/helix_platform/logging/: __init__.py
backend/helix_platform/persistence/: __init__.py  outbox.py
backend/helix_platform/security/: __init__.py
backend/helix_platform/spatial/: __init__.py  engine.py  providers.py
backend/helix_platform/telemetry/: __init__.py
backend/helix_platform/tests/unit/: test_logging.py  test_spatial.py
backend/lib/: __init__.py
backend/migrations/: 20260708_01_jurisdiction_hierarchy.sql  20260709_02_role_change_requests.sql
backend/services/: __init__.py  main.py
backend/services/ai-platform/: pyproject.toml
backend/services/ai-platform/src/ai_platform/: __init__.py
backend/services/ai-platform/tests/: test_ai_platform.py
backend/services/ai-platform/tests/evaluation/: test_ai_platform.py
backend/services/ai_platform/: __init__.py
backend/services/audit/: __init__.py
backend/services/decision_intelligence/: __init__.py
backend/services/governance/: __init__.py  models.py  workflows.py
backend/services/governance/application/: copilot.py  intelligence.py  knowledge_service.py  proactive.py  queries.py  services.py
backend/services/governance/application/agents/: __init__.py  classification.py  context.py  contracts.py  duplicate.py  impact.py  intake.py  orchestration.py  policy.py  recommendation.py
backend/services/governance/application/decision_brief/: __init__.py  alternatives.py  confidence.py  (+3 more)
backend/services/governance/infrastructure/: __init__.py  models.py  queries.py  repositories.py
backend/services/governance/lib/: mock_data.py
backend/services/governance/tests/: conftest.py
backend/services/identity/: __init__.py  crypto.py  jurisdiction.py  jwt.py  middleware.py  models.py  routes.py  schemas.py  seed.py
backend/services/media/: __init__.py
backend/services/plugin/: __init__.py
backend/services/tests/: conftest.py  test_auth_identity.py
backend/services/tests/integration/: test_identity.py  test_jurisdiction.py  test_main.py
backend/shared/contracts/: __init__.py  commands.py  queries.py
backend/shared/domain/: __init__.py  base.py  entities.py  enums.py  models.py  validation.py  value_objects.py
backend/shared/domain/knowledge/: interfaces.py
backend/shared/domain/repositories/: __init__.py  issue.py  notification.py  recommendation.py
backend/shared/events/: __init__.py
backend/shared/sdk/: __init__.py
backend/shared/tests/unit/: test_domain.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_main.py
(+216 files in other folders)
