[project]
name = "helix-backend"
version = "0.1.0"
description = "Helix Governance Operating System Backend Workspace"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "structlog>=24.2.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.8",
    "sqlalchemy>=2.0.31",
    "psycopg2-binary>=2.9.9",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
    "services/ai-platform",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
]
ignore = ["A002", "B024", "N818", "B008"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["E501", "PTH", "SIM", "E402"]
"**/evaluation/**/*.py" = ["E501"]
"**/ai_platform/**/*.py" = ["E501"]
"**/spatial/**/*.py" = ["E501"]
"**/knowledge/**/*.py" = ["E501"]
"services/main.py" = ["E402", "E501"]
"services/governance/**/*.py" = ["E501"]
"shared/domain/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
pythonpath = [
    ".",
    "services/ai-platform/src",
]

[[tool.mypy.overrides]]
module = "services.governance.infrastructure.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "services.governance.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "helix_platform.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "shared.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "helix_platform.spatial.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "helix_platform.logging"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ai_platform.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "services.governance.application.evidence.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "services.identity.*"
ignore_errors = true
